--- a/index.html
+++ b/index.html
@@ -1,12 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>Activity 1: Basic HTML Bio</title>
 </head>
+
 <body>
-    <h1>hello World</h1>
+
+  <h1>Chandra Karanam</h1>
+
+  <img src="https://placehold.it/200x200" alt="Chadnra Karanam">
+
+  <p>Hi Myname is Chandra. currently learning  Web based technologies and hope I will get experet soon.</p>
+  <p>and add this skill set to use python and other web related tech scripts.</p>
+
+  <ul>
+    <li><strong>Email:</strong> <a href="#">chandra@gmail.com</a></li>
+    <li><strong>Github:</strong> <a href="#">http:github.com</a></li>
+    <li><strong>Twitter:</strong> <a href="#">coming soon</a></li>
+  </ul>
+
+  <table>
+    <tr>
+      <th>Books</th>
+      <th>Movies</th>
+      <th>Games</th>
+      <th>Test</th>
+    </tr>
+    <tr>
+      <td>The Hobbit</td>
+      <td>Hot Fuzz</td>
+      <td>Dark Souls</td>
+      <td>HTML</td>
+    </tr>
+    <tr>
+      <td>The Name of the Wind</td>
+      <td>The Avengers</td>
+      <td>The Last of Us</td>
+      <td>DHTML</td>
+    </tr>
+    <tr>
+      <td>The Girl With All the Gifts</td>
+      <td>The Matrix</td>
+      <td>Dragon Age: Origins</td>
+    </tr>
+
+    <tr>
+      <td>HTML/td>
+      <td>Dynamic HTML</td>
+      <td>XHTML</td>
+    </tr>
+  </table>
+
 </body>
+
 </html>
