--- a/Cloudiness.html
+++ b/Cloudiness.html
@@ -30,7 +30,7 @@
                   <li><a href="temperature.html">Max Temperature</a></li>
                   <li><a href="Humidity.html">Humidity</a></li>
                   <li><a href="Cloudiness.html">Cloudiness</a></li>
-                  <li><a href="Windspeed.html">Wind Speed</a></li>
+                  <li><a href="WindSpeed.html">Wind Speed</a></li>
                 </ul>
               </li>
               <li><a href="Comparison.html"><b>Comparison</b></a></li>
@@ -74,7 +74,7 @@
                     </a>
                 </div>
                 <div class="col-xs-12 col-sm-3 col-md-6">
-                    <a href="Windspeed.html">
+                    <a href="WindSpeed.html">
                     <img class="image" src = "assets/images/Fig4.png" HSPACE=1 VSPACE=15/>
                               </a>
                           </div>
